@@ -26,6 +26,9 @@ $(document).ready(function() {
         setupTabs();
         setupPersistConfigs();
         populatePersistSaves();
+        setTimeout(function(){
+                checkCompatibility();
+        });
 });
 
 function setupTabs(){
