@@ -1,3 +1,4 @@
+1/3/18 v21a - Bug fixes for the different population import systems. \n
 12/29/17 v21 - Finished adding the population import system and changed the interface for app updates. \n
 12/26/17 v20 - Adds a new population type: yearly defined populations. Many change to the backend of how popualtions are stored and additional error handling for population input and validation. \n
 12/19/17 v19b - More bug fixes and changed persist save copy behavior to be more intuitive. \n
